--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
+    "mongoose": "^8.3.2",
     "tsc-watch": "^6.2.0"
   }
 }
